--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<a class="link" href="https://github.com/GFLJS2100-user/GFLJBeat" title="Github repo" target="_blank">&gt;&gt; Github</a>
+<a class="link" href="https://gfljs2100-user.github.io/GFLJBeat/" title="GFLJBeat" target="_blank">GFLJBeat</a>
 <html>
