--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <html>
 <a class="link" href="https://gfljs2100-user.github.io/GFLJBeat/" title="GFLJBeat" target="_blank">GFLJBeat</a>
 <html>
