--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <center>
 <html>
 <a class="link" href="https://gfljs2100-user.github.io/GFLJBeat/" title="GFLJBeat" target="_blank">GFLJBeat</a>
+<a class="link" href="https://gfljs2100-user.github.io/gfljbeat2/" title="GFLJBeat2" target="_blank">GFLJBeat2</a>
 <html>
 </center>
