--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <a class="link" href="https://gfljs2100-user.github.io/GFLJBeat/" title="GFLJBeat" target="_blank">GFLJBeat</a>
 <br>
 <a class="link" href="https://gfljs2100-user.github.io/gfljbeat2/" title="GFLJBeat2" target="_blank">GFLJBeat2</a>
+<br>
+<a class="link" href="https://gfljs2100-user.github.io/ibnjs/" title="IBNJS" target="_blank">GFLJBeat2</a>
 <html>
 </center>
