--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <a class="link" href="https://gfljs2100-user.github.io/GFLJBeat/" title="GFLJBeat" target="_blank">GFLJBeat</a>
 <br>
-<a class="link" href="https://gfljs2100-user.github.io/gfljbeat2/" title="GFLJBeat2" target="_blank">GFLJBeat2</a>
+<a class="link" href="https://gfljs2100-user.github.io/GFLJBeat2/" title="GFLJBeat2" target="_blank">GFLJBeat2</a>
 <br>
 <a class="link" href="https://gfljs2100-user.github.io/ibnjs/" title="IBNJS" target="_blank">IBNJS</a>
 <html>
